# ETFDecisionTerminal

./: .clang-format  .gitignore  CMakeLists.txt  README.md
apps/ETFDataService/: CMakeLists.txt
apps/ETFDecisionShell/: CMakeLists.txt
libs/AccountingEngine/: CMakeLists.txt
libs/CoreDomain/: CMakeLists.txt
libs/DataAccess/: CMakeLists.txt
libs/DataServiceApi/: CMakeLists.txt
libs/DataServiceClient/: CMakeLists.txt
libs/Diagnostics/: CMakeLists.txt
libs/MarketEngine/: CMakeLists.txt
libs/Protocol/: CMakeLists.txt
libs/Quantization/: CMakeLists.txt
libs/Security/: CMakeLists.txt
libs/ServiceHost/: CMakeLists.txt
libs/ServiceRuntime/: CMakeLists.txt
libs/ShellCore/: CMakeLists.txt
libs/ShellServices/: CMakeLists.txt
libs/StrategyEngine/: CMakeLists.txt
libs/Transport/: CMakeLists.txt
libs/Watchdog/: CMakeLists.txt
tests/: CMakeLists.txt  CTestDefaultConfig.cmake
tests/AccountingEngine/: CMakeLists.txt  test_accounting_engine_boundary.cpp  test_accounting_replay_dto_parser.cpp  test_accounting_replay_engine_buy_sell_partial.cpp  test_accounting_replay_engine_empty_ledger.cpp  test_accounting_replay_engine_missing_fee.cpp  test_accounting_replay_engine_missing_market_price.cpp  test_accounting_replay_engine_multi_account_buy.cpp  test_accounting_replay_engine_multi_currency_unsupported.cpp  test_accounting_replay_engine_multi_instrument_buy.cpp  test_accounting_replay_engine_negative_cash.cpp  test_accounting_replay_engine_sell_exceeds_position.cpp  test_accounting_replay_engine_single_buy.cpp
tests/AccountingFixtures/: AccountingExpectedOutputInspector.cpp  AccountingExpectedOutputInspector.h  AccountingFixtureLoader.cpp  AccountingFixtureLoader.h  AccountingReplayAssertionSkeleton.cpp  AccountingReplayAssertionSkeleton.h  AccountingReplayMinimalEngine.cpp  AccountingReplayMinimalEngine.h  AccountingReplayResult.cpp  AccountingReplayResult.h  AccountingReplayResultMapper.cpp  AccountingReplayResultMapper.h  AccountingReplayStubEngine.cpp  AccountingReplayStubEngine.h  AccountingReplayTestHarness.cpp  AccountingReplayTestHarness.h  CMakeLists.txt  test_accounting_fixture_loader.cpp  test_accounting_replay_assertions.cpp  test_accounting_replay_harness.cpp  test_accounting_replay_minimal_engine.cpp  test_accounting_replay_result.cpp  validate_accounting_replay_fixtures.py
tests/AccountingNoWrite/: AccountingNoWriteTestUtils.cpp  AccountingNoWriteTestUtils.h  CMakeLists.txt  ForbiddenSqlScanner.cpp  ForbiddenSqlScanner.h  test_accounting_no_write_harness.cpp  test_forbidden_sql_scanner.cpp
tests/CoreDomain/: CMakeLists.txt  test_core_domain.cpp
tests/DashboardMvpFullDelivery/: CMakeLists.txt  dashboard_mvp_full_delivery.cpp
tests/DataAccess/: CMakeLists.txt  test_accounting_trade_fact_reader.cpp  test_data_access.cpp  test_readonly_repositories.cpp  test_transaction_audit.cpp
tests/DataService/: CMakeLists.txt  test_dataservice_audit_write_actions.cpp  test_dataservice_readonly_actions.cpp
tests/DataServiceClient/: CMakeLists.txt  test_dataservice_client.cpp
tests/DevDocs/: CMakeLists.txt  test_readonly_demo_acceptance.py
tests/Diagnostics/: CMakeLists.txt  test_diagnostics.cpp
tests/ETFDiag/: CMakeLists.txt  test_etfdiag.cpp
tests/GlobalChineseUiReadability/: CMakeLists.txt  global_chinese_ui_readability_trial_feedback_fix.cpp
tests/LocalTrialReleaseCandidateFullDelivery/: CMakeLists.txt  local_trial_release_candidate_full_delivery.cpp
tests/MarketDataRefreshEngineFullDelivery/: CMakeLists.txt  market_data_historical_high_refresh_engine_full_delivery.cpp
tests/OtcMapAcMultiChannelDraftEngineFullDelivery/: CMakeLists.txt  otcmap_ac_multichannel_draft_engine_full_delivery.cpp
tests/PositionListFirstStageScaffolding/: CMakeLists.txt  PositionListFirstStageExpectedContract.cpp  PositionListFirstStageExpectedContract.h  PositionListFirstStageScenario.cpp  PositionListFirstStageScenario.h  test_position_list_first_stage_failure_matrix_contract.cpp  test_position_list_first_stage_guard_transition_contract.cpp  test_position_list_first_stage_scope_contract.cpp
tests/PositionListMapping/: CMakeLists.txt  PositionListMappingContractTestUtils.cpp  PositionListMappingContractTestUtils.h  test_position_list_request_mapping.cpp  test_position_list_response_mapping.cpp  test_position_list_trade_fact_mapping.cpp
tests/PositionListRealActionNoWrite/: CMakeLists.txt  PositionListRealActionNoWriteSkeleton.cpp  PositionListRealActionNoWriteSkeleton.h  test_position_list_real_action_failure_no_write_skeleton.cpp  test_position_list_real_action_no_write_skeleton.cpp
tests/Protocol/: CMakeLists.txt  test_protocol.cpp
tests/RealDailyUseDataDashboard/: CMakeLists.txt  real_daily_use_data_dashboard.cpp
tests/ServiceHost/: CMakeLists.txt  test_service_host.cpp
tests/ServiceRuntime/: CMakeLists.txt  test_service_runtime.cpp
tests/ShellAccountingAuditWriteAuthorizationGate/: CMakeLists.txt  ShellAccountingAuditWriteAuthorizationGate.cpp  ShellAccountingAuditWriteAuthorizationGate.h  test_shell_accounting_audit_write_authorization_dataservice_only_policy.cpp  test_shell_accounting_audit_write_authorization_error_mapping_policy.cpp  test_shell_accounting_audit_write_authorization_forbidden_payload_policy.cpp  test_shell_accounting_audit_write_authorization_gate.cpp  test_shell_accounting_audit_write_authorization_no_audit_write_yet.cpp  test_shell_accounting_audit_write_authorization_no_trade_or_strategy.cpp  test_shell_accounting_audit_write_authorization_no_ui_triggered_audit.cpp  test_shell_accounting_audit_write_authorization_payload_policy.cpp  test_shell_accounting_audit_write_authorization_rollback_policy.cpp  test_shell_accounting_audit_write_authorization_snapshot_write_input_policy.cpp
tests/ShellAccountingAuditWriteImplementation/: CMakeLists.txt  ShellAccountingAuditWriteImplementation.cpp  ShellAccountingAuditWriteImplementation.h  test_shell_accounting_audit_write_dataservice_only_boundary.cpp  test_shell_accounting_audit_write_duplicate_event_handling.cpp  test_shell_accounting_audit_write_idempotency.cpp  (+15 more)
(+1940 files in other folders)
