find_package(Python3 COMPONENTS Interpreter REQUIRED)

add_subdirectory(CoreDomain)
add_subdirectory(AccountingEngine)
add_subdirectory(AccountingFixtures)
add_subdirectory(AccountingNoWrite)
add_subdirectory(DataAccess)
add_subdirectory(DataService)
add_subdirectory(PositionListFirstStageScaffolding)
add_subdirectory(PositionListMapping)
add_subdirectory(PositionListRealActionNoWrite)
add_subdirectory(Protocol)
add_subdirectory(ServiceRuntime)
add_subdirectory(ServiceHost)
add_subdirectory(Transport)
add_subdirectory(DataServiceClient)
add_subdirectory(Diagnostics)
add_subdirectory(DevDocs)
add_subdirectory(ShellCore)
add_subdirectory(ShellAccountingControllerScaffolding)
add_subdirectory(ShellAccountingFakeClientBoundary)
add_subdirectory(ShellAccountingDataServiceAdapter)
add_subdirectory(ShellAccountingDataServiceAdapterLiveCallGate)
add_subdirectory(ShellAccountingDataServiceAdapterScaffolding)
add_subdirectory(ShellAccountingViewModel)
add_subdirectory(ShellAccountingPresenter)
add_subdirectory(ShellAccountingQmlBindingSmoke)
add_subdirectory(ShellAccountingQmlBindingSmokeRuntime)
add_subdirectory(ShellAccountingQmlStaticGate)
add_subdirectory(ShellAccountingQmlTypeRegistrationScaffold)
add_subdirectory(ShellAccountingQmlTypeRegistrationGate)
add_subdirectory(ShellAccountingQmlTypeRegistrationImplementation)
add_subdirectory(ShellAccountingQmlStartupRegistrationGate)
add_subdirectory(ShellAccountingQmlStartupRegistrationWiring)
add_subdirectory(ShellAccountingProductionQmlBindingGate)
add_subdirectory(ShellAccountingProductionQmlBindingImplementation)
add_subdirectory(ShellAccountingPresenterLifecycleGate)
add_subdirectory(ShellAccountingPresenterLifecycleImplementation)
add_subdirectory(ShellAccountingRealDataAdapterGate)
add_subdirectory(ShellAccountingRealDataAdapterImplementation)
add_subdirectory(ShellAccountingDataServiceFactsQueryGate)
add_subdirectory(ShellAccountingDataServiceFactsQueryImplementation)
add_subdirectory(ShellAccountingReplaySnapshotRebuildGate)
add_subdirectory(ShellAccountingReadOnlyReplayImplementation)
add_subdirectory(ShellAccountingSnapshotRebuildWriteGate)
add_subdirectory(ShellAccountingSnapshotRebuildImplementationGate)
add_subdirectory(ShellAccountingSnapshotRebuildImplementation)
add_subdirectory(ShellAccountingSnapshotWriteAuthorizationGate)
add_subdirectory(ShellAccountingSnapshotWriteImplementation)
add_subdirectory(ShellAccountingAuditWriteAuthorizationGate)
add_subdirectory(ShellAccountingAuditWriteImplementation)
add_subdirectory(ShellAccountingTradeDraftAuthorizationGate)
add_subdirectory(ShellAccountingTradeDraftImplementation)
add_subdirectory(ShellAccountingTradeDraftConfirmationAuthorizationGate)
add_subdirectory(ShellAccountingTradeDraftConfirmationImplementation)
add_subdirectory(ShellAccountingProductionTradingUiAuthorizationGate)
add_subdirectory(ShellAccountingServiceAdapter)
add_subdirectory(ShellServices)
add_subdirectory(ShellUiSmoke)
add_subdirectory(Watchdog)
add_subdirectory(ETFDiag)

add_test(
    NAME database_initial_schema
    COMMAND
        ${Python3_EXECUTABLE}
        ${CMAKE_CURRENT_SOURCE_DIR}/database/validate_schema.py
        --migration
        ${PROJECT_SOURCE_DIR}/migrations/001_initial_schema.sql
)

set_tests_properties(database_initial_schema PROPERTIES
    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
)
