find_package(Python3 COMPONENTS Interpreter REQUIRED)

add_subdirectory(CoreDomain)
add_subdirectory(AccountingEngine)
add_subdirectory(AccountingFixtures)
add_subdirectory(AccountingNoWrite)
add_subdirectory(DataAccess)
add_subdirectory(DataService)
add_subdirectory(PositionListFirstStageScaffolding)
add_subdirectory(PositionListMapping)
add_subdirectory(PositionListRealActionNoWrite)
add_subdirectory(Protocol)
add_subdirectory(ServiceRuntime)
add_subdirectory(ServiceHost)
add_subdirectory(Transport)
add_subdirectory(DataServiceClient)
add_subdirectory(Diagnostics)
add_subdirectory(DevDocs)
add_subdirectory(ShellCore)
add_subdirectory(ShellAccountingControllerScaffolding)
add_subdirectory(ShellAccountingFakeClientBoundary)
add_subdirectory(ShellAccountingDataServiceAdapter)
add_subdirectory(ShellAccountingDataServiceAdapterLiveCallGate)
add_subdirectory(ShellAccountingDataServiceAdapterScaffolding)
add_subdirectory(ShellAccountingViewModel)
add_subdirectory(ShellAccountingPresenter)
add_subdirectory(ShellAccountingQmlBindingSmoke)
add_subdirectory(ShellAccountingQmlBindingSmokeRuntime)
add_subdirectory(ShellAccountingQmlStaticGate)
add_subdirectory(ShellAccountingQmlTypeRegistrationScaffold)
add_subdirectory(ShellAccountingQmlTypeRegistrationGate)
add_subdirectory(ShellAccountingQmlTypeRegistrationImplementation)
add_subdirectory(ShellAccountingQmlStartupRegistrationGate)
add_subdirectory(ShellAccountingQmlStartupRegistrationWiring)
add_subdirectory(ShellAccountingProductionQmlBindingGate)
add_subdirectory(ShellAccountingProductionQmlBindingImplementation)
add_subdirectory(ShellAccountingPresenterLifecycleGate)
add_subdirectory(ShellAccountingPresenterLifecycleImplementation)
add_subdirectory(ShellAccountingRealDataAdapterGate)
add_subdirectory(ShellAccountingRealDataAdapterImplementation)
add_subdirectory(ShellAccountingDataServiceFactsQueryGate)
add_subdirectory(ShellAccountingDataServiceFactsQueryImplementation)
add_subdirectory(ShellAccountingReplaySnapshotRebuildGate)
add_subdirectory(ShellAccountingReadOnlyReplayImplementation)
add_subdirectory(ShellAccountingSnapshotRebuildWriteGate)
add_subdirectory(ShellAccountingSnapshotRebuildImplementationGate)
add_subdirectory(ShellAccountingSnapshotRebuildImplementation)
add_subdirectory(ShellAccountingSnapshotWriteAuthorizationGate)
add_subdirectory(ShellAccountingSnapshotWriteImplementation)
add_subdirectory(ShellAccountingAuditWriteAuthorizationGate)
add_subdirectory(ShellAccountingAuditWriteImplementation)
add_subdirectory(ShellAccountingTradeDraftAuthorizationGate)
add_subdirectory(ShellAccountingTradeDraftImplementation)
add_subdirectory(ShellAccountingTradeDraftConfirmationAuthorizationGate)
add_subdirectory(ShellAccountingTradeDraftConfirmationImplementation)
add_subdirectory(ShellAccountingProductionTradingUiAuthorizationGate)
add_subdirectory(ShellAccountingProductionTradingUiImplementation)
add_subdirectory(ShellAccountingBrokerOrderAuthorizationGate)
add_subdirectory(ShellAccountingBrokerOrderImplementation)
add_subdirectory(ShellAccountingRealBrokerOrderAuthorizationGate)
add_subdirectory(ShellAccountingRealBrokerOrderImplementationGate)
add_subdirectory(ShellAccountingBrokerAdapterInterfaceScaffold)
add_subdirectory(ShellAccountingBrokerAdapterImplementationGate)
add_subdirectory(ShellAccountingBrokerAdapterDisabledWiring)
add_subdirectory(ShellAccountingBrokerSandboxAdapterAuthorizationGate)
add_subdirectory(ShellAccountingBrokerSandboxAdapterScaffold)
add_subdirectory(ShellAccountingBrokerSandboxModeSelector)
add_subdirectory(ShellAccountingBrokerSandboxRuntimeSelectorAuthorizationGate)
add_subdirectory(ShellAccountingBrokerSandboxRuntimeSelectorDisabledWiring)
add_subdirectory(ShellAccountingBrokerRuntimeModeSourceAuthorizationGate)
add_subdirectory(ShellAccountingBrokerRuntimeModeSourceDisabledScaffold)
add_subdirectory(ShellAccountingBrokerSandboxRuntimeModeSourceAuthorizationGate)
add_subdirectory(ShellAccountingBrokerSandboxRuntimeModeSourceScaffold)
add_subdirectory(ShellAccountingBrokerSandboxRuntimeModeSourceSelectorAuthorizationGate)
add_subdirectory(ShellAccountingBrokerSandboxRuntimeModeSourceSelectorScaffold)
add_subdirectory(ShellAccountingBrokerSandboxRuntimeModeSourceSelectorWiringAuthorizationGate)
add_subdirectory(ShellAccountingBrokerSandboxRuntimeModeSourceSelectorDisabledWiring)
add_subdirectory(ShellAccountingBrokerSandboxRuntimeModeEnablementAuthorizationGate)
add_subdirectory(ShellAccountingBrokerSandboxRuntimeEnablementStateScaffold)
add_subdirectory(ShellAccountingBrokerSandboxRuntimeEnablementStateWiringAuthorizationGate)
add_subdirectory(ShellAccountingBrokerSandboxRuntimeEnablementStateDisabledWiring)
add_subdirectory(ShellAccountingManualTransactionCashMovementMvpAuthorizationGate)
add_subdirectory(ShellAccountingManualTransactionCashMovementValidationScaffold)
add_subdirectory(ShellAccountingManualEntryDataServiceActionAuthorizationGate)
add_subdirectory(ShellAccountingManualEntryDataServiceActionScaffold)
add_subdirectory(ShellAccountingManualEntryDataServiceActionImplementationAuthorizationGate)
add_subdirectory(ShellAccountingManualEntryDataServiceActionValidationWiring)
add_subdirectory(ShellAccountingManualEntryPersistenceAuthorizationGate)
add_subdirectory(ShellAccountingManualEntryRepositoryScaffoldAuthorizationGate)
add_subdirectory(ShellAccountingManualEntryRepositoryScaffold)
add_subdirectory(ShellAccountingManualEntryRepositoryImplementationAuthorizationGate)
add_subdirectory(ShellAccountingManualEntrySchemaAdequacyReviewGate)
add_subdirectory(ShellAccountingManualEntrySchemaGapAuthorizationGate)
add_subdirectory(ShellAccountingManualEntrySchemaImplementationAuthorizationGate)
add_subdirectory(ShellAccountingManualEntrySchemaMigrationImplementation)
add_subdirectory(ShellAccountingManualEntryRepositoryImplementationPostMigrationAuthorizationGate)
add_subdirectory(ShellAccountingManualTransactionRepositoryWriteImplementation)
add_subdirectory(ShellAccountingManualCashMovementRepositoryWriteAuthorizationGate)
add_subdirectory(ShellAccountingManualCashMovementSchemaContractAlignmentGate)
add_subdirectory(ShellAccountingManualCashMovementRepositoryDualWriteImplementation)
add_subdirectory(ShellAccountingManualEntryDataServiceWriteWiringAuthorizationGate)
add_subdirectory(ShellAccountingManualEntryDataServiceWriteWiringImplementation)
add_subdirectory(ShellAccountingManualEntryQmlPresenterAuthorizationGate)
add_subdirectory(ShellAccountingManualEntryQmlPresenterImplementation)
add_subdirectory(ShellAccountingManualEntryPostWriteReadbackRefreshAuthorizationGate)
add_subdirectory(ShellAccountingManualEntryPostWriteReadbackRefreshImplementation)
add_subdirectory(ShellAccountingManualEntryMvpE2eAcceptanceAuthorizationGate)
add_subdirectory(ShellAccountingManualEntryMvpRuntimeE2eAcceptance)
add_subdirectory(ShellAccountingManualEntryReadbackReplayAdequacyReviewGate)
add_subdirectory(ShellAccountingManualEntryReadbackMappingAuthorizationGate)
add_subdirectory(ShellAccountingManualEntryReadbackMappingImplementation)
add_subdirectory(ShellAccountingManualEntryReadbackDailyUseAcceptanceAuthorizationGate)
add_subdirectory(ShellAccountingManualEntryReadbackDailyUseRuntimeAcceptance)
add_subdirectory(ShellAccountingManualEntrySellWithdrawalDailyUseAcceptanceAuthorizationGate)
add_subdirectory(ShellAccountingManualEntrySellWithdrawalDailyUseRuntimeAcceptance)
add_subdirectory(ShellAccountingManualEntryReplayAuditLedgerAdequacyReviewGate)
add_subdirectory(ShellAccountingManualEntryReplayPolicyAuthorizationGate)
add_subdirectory(ShellAccountingManualEntryReplayFixtureMatrixAuthorizationGate)
add_subdirectory(ShellAccountingManualEntryReplayFixtureFilesAuthorizationGate)
add_subdirectory(ShellAccountingManualEntryReplayFixtureFilesScaffoldAuthorizationGate)
add_subdirectory(ShellAccountingManualEntryReplayFixtureFilesScaffold)
add_subdirectory(ShellAccountingManualEntryReplayFixtureStaticValidatorAuthorizationGate)
add_subdirectory(ShellAccountingManualEntryReplayFixtureStaticValidator)
add_subdirectory(ShellAccountingManualEntryReplayFixtureNegativeFixturesAuthorizationGate)
add_subdirectory(ShellAccountingManualEntryReplayFixtureNegativeFixturesScaffoldAuthorizationGate)
add_subdirectory(ShellAccountingManualEntryReplayNegativeFixtureScaffoldFilesGate)
add_subdirectory(ShellAccountingManualEntryReplayNegativeFixtureStaticValidatorAuthorizationGate)
add_subdirectory(ShellAccountingManualEntryReplayNegativeFixtureStaticValidator)
add_subdirectory(ShellAccountingManualEntryReplayNegativeFixtureStaticValidatorRegressionMatrixGate)
add_subdirectory(ShellAccountingManualEntryReplayNegativeFixtureStaticValidatorFailureModeHardeningGate)
add_subdirectory(ShellAccountingManualEntryReplayNegativeFixtureValidatorCiCloseoutGate)
add_subdirectory(ShellAccountingManualEntryReplayNegativeFixtureValidatorPhaseCloseoutGate)
add_subdirectory(ShellAccountingManualEntryReplayNextPhaseAuthorizationPlanningGate)
add_subdirectory(ShellAccountingManualEntryReplayTestOnlyDryRunHarnessAuthorizationGate)
add_subdirectory(ShellAccountingManualEntryReplayTestOnlyDryRunHarness)
add_subdirectory(ShellAccountingManualEntryReplayTestOnlyDryRunHarnessRegressionMatrixGate)
add_subdirectory(ShellAccountingManualEntryReplayImplementationAuthorizationGate)
add_subdirectory(ShellAccountingManualEntryReplayImplementation)
add_subdirectory(ShellAccountingManualEntryReplayImplementationRegressionMatrixGate)
add_subdirectory(ShellAccountingManualEntryReplayImplementationFailureModeHardeningGate)
add_subdirectory(ShellAccountingManualEntryReplayImplementationCiCloseoutGate)
add_subdirectory(ShellAccountingManualEntryReplayImplementationPhaseCloseoutGate)
add_subdirectory(ShellAccountingManualEntryReplayAccountingEngineAdequacyReviewAuthorizationGate)
add_subdirectory(ShellAccountingManualEntryReplayAccountingEngineAdequacyReviewImplementationGate)
add_subdirectory(ShellAccountingManualEntryReplayAccountingEngineAdequacyReviewRegressionMatrixGate)
add_subdirectory(ShellAccountingManualEntryReplayAccountingEngineAdequacyReviewFailureModeHardeningGate)
add_subdirectory(ShellAccountingManualEntryReplayAccountingEngineAdequacyReviewCiCloseoutGate)
add_subdirectory(ShellAccountingManualEntryReplayAccountingEngineAdequacyReviewPhaseCloseoutGate)
add_subdirectory(ShellAccountingManualEntryReplayAccountingEngineBridgeAuthorizationGate)
add_subdirectory(ShellAccountingManualEntryReplayAccountingEngineBridge)
add_subdirectory(ShellAccountingManualEntryReplayAccountingEngineBridgeImplementationGate)
add_subdirectory(ShellAccountingManualEntryReplayAccountingEngineBridgeRegressionMatrixGate)
add_subdirectory(ShellAccountingManualEntryReplayAccountingEngineBridgeFailureModeHardeningGate)
add_subdirectory(ShellAccountingManualEntryReplayAccountingEngineBridgeCiCloseoutGate)
add_subdirectory(ShellAccountingManualEntryReplayAccountingEngineBridgePhaseCloseoutGate)
add_subdirectory(ShellAccountingManualEntryReplayAccountingEngineRuntimeIntegrationAuthorizationGate)
add_subdirectory(ShellAccountingManualEntryReplayReadOnlyRuntimeIntegrationVerticalSliceGate)
add_subdirectory(ShellAccountingManualEntryReplayFixtureBackedVbaParityReadOnlyVerticalSlice)
add_subdirectory(ShellAccountingManualEntryReplayFixtureParityMatrixReadOnlyVerticalSlice)
add_subdirectory(ShellAccountingManualEntryReplayExcelVbaExportSampleImportReadOnlyVerticalSlice)
add_subdirectory(ShellAccountingManualEntryReplayExcelVbaExportSampleImportMatrixDiagnosticsReadOnlyVerticalSlice)
add_subdirectory(ShellAccountingManualEntryReplayExcelVbaImportReadOnlyProductionParserBoundary)
add_subdirectory(ShellAccountingExcelVbaImportReadOnlyDataServicePreviewAction)
add_subdirectory(ShellAccountingExcelVbaImportReadOnlyPreviewClientAdapter)
add_subdirectory(ShellAccountingServiceAdapter)
add_subdirectory(ShellServices)
add_subdirectory(ShellUiSmoke)
add_subdirectory(Watchdog)
add_subdirectory(ETFDiag)

add_test(
    NAME database_initial_schema
    COMMAND
        ${Python3_EXECUTABLE}
        ${CMAKE_CURRENT_SOURCE_DIR}/database/validate_schema.py
        --migration
        ${PROJECT_SOURCE_DIR}/migrations/001_initial_schema.sql
)

set_tests_properties(database_initial_schema PROPERTIES
    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
)
